# guitar-tuner-svn

trunk/: ChangeLog  NEWS  README  THANKS  TODO  configure.ac
trunk/pixmaps/: Makefile.am
trunk/src/: Makefile.am  gui.c  gui.h  main.c  tuner.c  tuner.h
