pixmapsdir   = $(datadir)/pixmaps/guitar-tuner
pixmaps_DATA =	A.png		\
				B.png		\
				C.png		\
				D.png		\
				Down.png	\
				E.png		\
				Empty.png	\
				F.png		\
				G.png		\
				Icon.png	\
				Logo.png	\
				NoSharp.png	\
				Sharp.png	\
				Skin.png	\
				Up.png
EXTRA_DIST   = $(pixmaps_DATA)
